# OOP_lab4

./: CMakeLists.txt  README  main.cpp  tests.cpp
include/: array.h  figure.h  hexagon.h  octagon.h  pair.h  pentagon.h  point.h
source/: array.tpp  figure.tpp  hexagon.tpp  octagon.tpp  pentagon.tpp  point.tpp
